--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--sincronizacion-->
     <meta charset="UTF-8">
 
-    <title>MONSTEr ENERGy</title>
+    <title>MONSTEr ENERGY</title>
 
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/menuinicio.css">
